# bare-sidecar

./: CMakeLists.txt  README.md  index.d.ts  index.js  package.json  prepack.js  prepublish.js  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
lib/: bare.js  builtins.json  ipc.js  runtime.c  runtime.js
test/fixtures/: echo.js  ipc-close.js  ipc-destroy.js  sleep.js  throw.js
